# ollie

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  ollie.service  pyproject.toml
ollie/: __init__.py  cli.py  main.py
ollie/core/: __init__.py  config.py  orchestrator.py  skill.py
ollie/skills/: __init__.py  aircraft.py  claude.py  conversions.py  flights.py  jokes.py  math.py  recipes.py  sonos.py  sports.py  time.py  timer.py  travel.py  weather.py
ollie/voice/: __init__.py  audio.py  stt.py  tts.py  wakeword.py  wakeword_oww.py
tests/: __init__.py  test_skills.py
