[project]
name = "ollie"
version = "0.1.0"
description = "Offline Local Language Intelligence - Privacy-focused voice assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "soco>=0.30",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
]
llm = [
    "llama-cpp-python>=0.2.0",
]
voice = [
    "faster-whisper>=1.0.0",
    "openwakeword>=0.5.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
]

[project.scripts]
ollie = "ollie.cli:main"
ollie-voice = "ollie.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ollie"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
